test: 테스트 코드 3차 수정